--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="prayer-time">
       <div class="bg-img">
         <img
-          src="imgs/david-billings-EwcvNe53bdM-unsplash (1).jpg"
+          src="./imgs/david-billings-EwcvNe53bdM-unsplash (1).jpg"
           alt="mosque back ground image"
         />
       </div>
